--- a/html-css/exercicios/ex022/fundo006.html
+++ b/html-css/exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagens de fundo</title>
+    <title>Fundo fixo de tela</title>
 
     <style>
         body {
@@ -14,10 +14,18 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /*Shorthand do background
+            color > image > position > repeat > size > attachement
+            */
+
+            /*background: black url('imagens/wallpaper002.jpg') center top no-repeat fixed;*/
+
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
@@ -28,6 +36,12 @@
 <body>
     <main>
         <h1>Imagens de Fudndo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellendus at perspiciatis veritatis sed, hic modi eius, ipsum in quod autem qui molestias cumque quaerat, eos dolores eaque? Repudiandae, ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, minus et aspernatur, possimus quos maxime beatae facilis alias autem nihil accusantium, voluptas doloribus nostrum impedit ipsa fuga? Ipsam, earum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsam perspiciatis cumque, facere at dolor nisi voluptatibus officia odio consectetur fuga deserunt reiciendis eius molestias quam a explicabo velit vitae.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellendus at perspiciatis veritatis sed, hic modi eius, ipsum in quod autem qui molestias cumque quaerat, eos dolores eaque? Repudiandae, ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, minus et aspernatur, possimus quos maxime beatae facilis alias autem nihil accusantium, voluptas doloribus nostrum impedit ipsa fuga? Ipsam, earum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsam perspiciatis cumque, facere at dolor nisi voluptatibus officia odio consectetur fuga deserunt reiciendis eius molestias quam a explicabo velit vitae.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellendus at perspiciatis veritatis sed, hic modi eius, ipsum in quod autem qui molestias cumque quaerat, eos dolores eaque? Repudiandae, ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, minus et aspernatur, possimus quos maxime beatae facilis alias autem nihil accusantium, voluptas doloribus nostrum impedit ipsa fuga? Ipsam, earum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsam perspiciatis cumque, facere at dolor nisi voluptatibus officia odio consectetur fuga deserunt reiciendis eius molestias quam a explicabo velit vitae.
+        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellendus at perspiciatis veritatis sed, hic modi eius, ipsum in quod autem qui molestias cumque quaerat, eos dolores eaque? Repudiandae, ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, minus et aspernatur, possimus quos maxime beatae facilis alias autem nihil accusantium, voluptas doloribus nostrum impedit ipsa fuga? Ipsam, earum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsam perspiciatis cumque, facere at dolor nisi voluptatibus officia odio consectetur fuga deserunt reiciendis eius molestias quam a explicabo velit vitae.
         </p>
     </main>
