imagens de fundo e shorthand

--- a/html-css/exercicios/ex022/fundo006.html
+++ b/html-css/exercicios/ex022/fundo006.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <main>
-        <h1>Imagens de Fudndo</h1>
+        <h1>Imagens de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellendus at perspiciatis veritatis sed, hic modi eius, ipsum in quod autem qui molestias cumque quaerat, eos dolores eaque? Repudiandae, ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, minus et aspernatur, possimus quos maxime beatae facilis alias autem nihil accusantium, voluptas doloribus nostrum impedit ipsa fuga? Ipsam, earum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsam perspiciatis cumque, facere at dolor nisi voluptatibus officia odio consectetur fuga deserunt reiciendis eius molestias quam a explicabo velit vitae.
         </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellendus at perspiciatis veritatis sed, hic modi eius, ipsum in quod autem qui molestias cumque quaerat, eos dolores eaque? Repudiandae, ad! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptates, minus et aspernatur, possimus quos maxime beatae facilis alias autem nihil accusantium, voluptas doloribus nostrum impedit ipsa fuga? Ipsam, earum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ipsam perspiciatis cumque, facere at dolor nisi voluptatibus officia odio consectetur fuga deserunt reiciendis eius molestias quam a explicabo velit vitae.
