correção no texto

--- a/desafios/desafio-5/index.html
+++ b/desafios/desafio-5/index.html
@@ -11,7 +11,7 @@
     <h1>Minhas redes sociais</h1>
     <h2>Quem sou eu?</h2>
     <p><img src="IMG_-4bh823.png" alt="minha foto"></p>
-    <p>Meu nome é <b>Igor Assis Mendes da Silva</b> sou novo no mundo da programação e estou bem animado com isso, entrei nisso por acaso não sabia o que eu ia fazer depois do ensino medio. As vezes me acho bem irresponsavel porque não estou indo pra oficina, ai me sinto muito inutil, mas tomara que esse ano eu consiga pelo menos um estagio na programação e tambem estou tentando a vida de proplayer no free fire.</p>
+    <p>Meu nome é <b>Igor Assis Mendes da Silva</b> sou novo no mundo da programação e estou bem animado com isso, entrei nisso por acaso não sabia o que eu ia fazer depois do ensino medio.</p>
 
     <h2>Como falar comigo?</h2>
     <ul>
