--- a/html-css/exercicios/ex023/tabela002.html
+++ b/html-css/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -28,6 +29,12 @@
 
         tbody > tr:nth-child(even) {
             background-color: lightgray;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: grey;
         }
 
         td, th {
