aprendi textarea e optgropu

--- a/html-css/exercicios/ex025/form007.html
+++ b/html-css/exercicios/ex025/form007.html
@@ -13,10 +13,44 @@
         <p>
             <label for="iest">Estado </label>
             <select name="estado" id="iest">
-                <option value="MG">Minas gerais</option>
-                <option value="RJ">Rio de Janeiro</option>
-                <option value="SP">São Paulo</option>
+
+                <option value="" selected>--Escolha--</option>
+
+                <optgroup label="Região Sudeste">
+
+                    <option value="MG">Minas gerais</option>
+                    <option value="RJ">Rio de Janeiro</option>
+                    <option value="SP">São Paulo</option>
+
+                </optgroup>
+                
+
+                <optgroup label="Região Nordeste">
+
+                    <option value="MA">Maranhão</option>
+                    <option value="PE">Pernambuco</option>
+                    <option value="RN">Rio Grande do Norte</option>
+
+                </optgroup>
             </select>
+        </p>
+
+        <p>
+            <label for="iprof">Profissão: </label>
+            <input type="text" name="prof" id="iprof" list="lstprof">
+
+            <datalist id="lstprof">
+                <option value="ADM">Administrador</option>
+                <option value="CONT">Contador</option>
+                <option value="DEV">Desenvolvedor</option>
+                <option value="PROF">Professor</option>
+            </datalist>
+
+        </p>
+
+        <p>
+            <label for="imsg">Mensagem: </label> <br>
+            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
         </p>
         
         <p>
