--- a/html-css/exercicios/ex026/mq004/index.html
+++ b/html-css/exercicios/ex026/mq004/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media query</title>
+   <link rel="stylesheet" href="estilos/style.css" media="all">
+   <link rel="stylesheet" href="estlos/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando medias-queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="acessando via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="versão para impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="acessando via pc">
+        <img id="tv" src="imagens/icon-tv.png" alt="versão via TV">
+    </main>
 </body>
 </html>
