--- a/html-css/exercicios/ex026/mq004/index.html
+++ b/html-css/exercicios/ex026/mq004/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media query</title>
-   <link rel="stylesheet" href="estilos/style.css" media="all">
-   <link rel="stylesheet" href="estlos/media-query.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
+   
 </head>
 <body>
     <main>
